# praxis-ai-core

./: .env.example  .gitchangelog.rc  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  workspace_manager.py
config/: settings.py
core/: orchestrator.py  refiner.py  sub_agent.py
interfaces/: api.py  cli.py
praxis_ai/: __init__.py  cli.py  workspace_manager.py
praxis_ai/config/: models.py  settings.py
praxis_ai/core/: chat.py  orchestrator.py  refiner.py  sub_agent.py
praxis_ai/interfaces/: api.py
praxis_ai/interfaces/realtime-api/backend/: package-lock.json  server.js
praxis_ai/tools/: calendar_tools.py  conversation_history.py  file_operations.py  web_search.py  workspace_tools.py
praxis_ai/utils/: helpers.py  logging.py
tests/: test_orchestrator.py  test_refiner.py  test_sub_agent.py
tools/: file_operations.py  web_search.py
utils/: helpers.py  logging.py
