[tool.poetry]
name = "praxis-ai"
version = "0.0.1"
description = "A CLI tool for Praxis AI"
authors = ["Calvin Magezi <calvin@syntratechnologies.com>"]
readme = "README.md"
packages = [{include = "praxis_ai", from = "."}]

[tool.poetry.dependencies]
python = ">=3.9"
rich = "^10.0.0"
pydantic = "^1.10.0"
python-dotenv = "^0.19.0"
openai = "^1.47.0"
ell-ai = "^0.0.7"
anthropic = { version = "^0.34.2", optional = true }
tavily-python = "^0.1.0"
groq = { version = "^0.11.0", optional = true }
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.10.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.3"
gitchangelog = "^3.0.4"
pystache = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
praxis-ai = "praxis_ai.main:main"